# hushar

./: .gitignore  Cargo.toml  LICENSE  README.md
benchmark/: build.gradle  settings.gradle
benchmark-client/: Cargo.toml  build.rs
benchmark-client/src/: lib.rs  main.rs
benchmark-data/: bench_service_config.json
benchmark/bench-data/: bench_service_config.json  bench_vect_config.json
benchmark/src/main/java/io/github/pratikbarhate/hushar/benchmark/: BenchmarkClient.java  Main.java
hushar/: Cargo.toml
hushar-proto/: Cargo.toml  build.rs
hushar-proto/src/: lib.rs
hushar/src/: config.rs  inference.rs  io.rs  main.rs
hushar/src/config/: service_config.rs  vectorization_config.rs
hushar/src/inference/: scoring.rs  transformations.rs  vectorization.rs
hushar/src/io/: file_reader.rs  model_loader.rs  side_car.rs
hushar/test-data/: sigmoid_model_12.onnx  sigmoid_model_3.onnx
schemas/protos/: client.proto  service.proto  structs.proto
scripts/: generate_benchmark_model.py  generate_test_model.py  requirements.txt
