[workspace]
members = [
    "hushar",
    "hushar-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pratik Barhate"]
license = "MIT"

[workspace.dependencies]
aws-config = { version= "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.68"
aws-sdk-kinesis = "1.68"
aws-sdk-s3 = "1.68"
aws-smithy-runtime = { version = "1.8.1", features = ["test-util"] }
aws-smithy-types = "1.3"
futures = "0.3"
hushar-proto = { path = "./hushar-proto" }
mockall = "0.12"
prost = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tract-onnx = "0.21.12"
