[workspace]
members = [ 
    "benchmark-client",
    "hushar",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pratik Barhate"]
license = "MIT"

[workspace.dependencies]
async-channel = "2.5.0"
aws-config = { version= "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.68"
aws-sdk-s3 = "1.68"
chrono = "0.4.41"
futures = "0.3"
mockall = "0.13.1"
prost = "0.14.1"
rand = "0.10.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tract-onnx = "0.22.0"
uuid = { version = "1.17.0", features = ["v4"]}
