[package]
name = "benchmark-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
futures = { workspace = true}
prost = { workspace = true }
rand = { workspace = true}
tokio = { workspace = true}
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
