[package]
name = "hushar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
aws-sdk-kinesis = { workspace = true }
aws-sdk-s3 = { workspace = true }
futures = { workspace = true }
hushar-proto = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream =  { workspace = true }
tonic = { workspace = true }
tract-onnx = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
