[package]
name = "hushar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-channel = { workspace = true }
aws-config = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }
aws-sdk-s3 = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tract-onnx = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
mockall = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
